--- a/itrackmygps/Xibs/SplashStartupVC_iphone.xib
+++ b/itrackmygps/Xibs/SplashStartupVC_iphone.xib
@@ -20,6 +20,9 @@
                     <state key="normal" title="Register">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="buttonRegisterPressed:" destination="-2" eventType="touchDown" id="NgW-w3-y1z"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OVe-bx-iEc">
                     <rect key="frame" x="137" y="370" width="38" height="30"/>
@@ -27,6 +30,9 @@
                     <state key="normal" title="Login">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="buttonLoginPressed:" destination="-2" eventType="touchDown" id="zRY-8g-tZC"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
